# bdirscanner

./: CMakeLists.txt  HACKING.md  README.md
dirit/: CMakeLists.txt  node.cpp  node.h
include/: fnv_wrapper.h  logger.h  macros.h
tests/: CMakeLists.txt
tests/data/dirit_test/: README.txt
tests/dirit_test/: CMakeLists.txt  dirit_test.cpp
